# glow

./: .gitignore  Cargo.toml  dependencies.txt
backtest/: Cargo.toml
backtest/src/: main.rs
cli/: Cargo.toml
cli/src/: datetime.rs  functions.rs  lib.rs  symbols.rs
data/test/: BTC_USDT_AGIX_USDT.csv  benchmark.csv  calc 1BTC_USDT_AGIX_USDT.csv
data/ticks/binance/BTCUSDT/2024/09/: 10.csv  11.csv
optimization/: Cargo.toml
optimization/data/: test_data.csv
optimization/src/: main.rs
optimization/src/prelude/: combinable_params.rs  errors.rs  mod.rs  optimizable_params.rs
optimization/src/prelude/cache/: mod.rs
optimization/src/prelude/features/: mod.rs
optimization/src/prelude/numbers/: mod.rs
optimization/src/prelude/positions/: mod.rs
optimization/src/prelude/settings/: mod.rs
optimization/src/prelude/strategy/: mod.rs
optimization/traits/: mod.rs  optimizable_indicator.rs  optimizable_signal.rs
shared/common/: Cargo.toml
shared/common/src/: lib.rs
shared/common/src/constants/: mod.rs
shared/common/src/enums/: balance.rs  granularity.rs  http_method.rs  log_level.rs  mod.rs  order_action.rs  order_status.rs  processer_action.rs  side.rs  signal_category.rs  symbol_id.rs  time_in_force.rs  trade_status.rs  trading_action.rs  trading_data_update.rs
shared/common/src/enums/modifiers/: leverage.rs  mod.rs  position_lock.rs  price_level.rs
shared/common/src/functions/: csv.rs  mod.rs  performance.rs
shared/common/src/models/: market.rs
shared/common/src/static/: mod.rs
shared/common/src/structs/: behavior_subject.rs  contract.rs  execution.rs  mod.rs  order.rs  statistics.rs  symbol.rs  tick_data.rs  trade.rs  trading_settings.rs
shared/common/src/traits/: exchange.rs  indicator.rs  mod.rs  signal.rs  ws_processer.rs
shared/core/: Cargo.toml
shared/core/src/: config.rs  controller.rs  data_feed.rs  lib.rs  performance.rs  strategy.rs  trader.rs
shared/core/src/benchmark/: functions.rs  legacy.rs  mod.rs
shared/error/: Cargo.toml
shared/error/src/: lib.rs
shared/exchanges/: Cargo.toml
shared/exchanges/src/: lib.rs
shared/exchanges/src/binance/: dtos.rs  enums.rs  functions.rs  legacy.rs  mod.rs  structs.rs
shared/exchanges/src/bybit/: enums.rs  functions.rs  mod.rs  structs.rs  tests.rs
shared/exchanges/src/config/: mod.rs
shared/exchanges/src/enums/: mod.rs
shared/exchanges/src/shared/: deserializers.rs
shared/exchanges/src/static/: mod.rs
shared/exchanges/src/structs/: mod.rs
shared/modules/: Cargo.toml
shared/modules/src/: data_feed.rs  performance.rs  trader.rs  update_as_set.rs
shared/modules/tests/: data_feed.rs
src/: main.rs
src/optimization/: mod.rs
src/optimization/traits/: optimizable_indicator.rs
src/shared/csv/: mod.rs
src/trader/: mod.rs
src/trader/constants/: mod.rs
src/trader/contracts/: mod.rs
src/trader/enums/: balance.rs  http_method.rs  log_level.rs  mod.rs  order_action.rs  order_stage.rs  order_status.rs  order_type.rs  processer_action.rs  request_method.rs  side.rs  signal_category.rs  stop_order_type.rs  trading_data_update.rs
src/trader/enums/modifiers/: leverage.rs  position_lock.rs  price_level.rs
src/trader/errors/: mod.rs
src/trader/exchanges/: mod.rs
src/trader/exchanges/binance/: enums.rs  mod.rs  models.rs
src/trader/exchanges/bybit/: enums.rs  functions.rs  mod.rs  models.rs
src/trader/exchanges/shared/: deserializers.rs  mod.rs  serializers.rs
src/trader/functions/: mod.rs
src/trader/indicators/: ema_trend.rs  fast_slow_rmas.rs  functions.rs  mod.rs  stc.rs  stochastic.rs  stochastic_no_resample.rs  stochastic_threshold.rs  test.rs  tsi.rs
src/trader/models/: async_behavior_subject.rs  behavior_subject.rs  contract.rs  event_bus.rs  exchange.rs  execution.rs  indicator.rs  market_data.rs  mod.rs  modifiers.rs  observer.rs  order.rs  performance.rs  previous_subject.rs  signal.rs  strategy.rs  tick_data.rs  trade.rs  trading_settings.rs
src/trader/modules/: data_feed.rs  performance.rs  strategy.rs  trader.rs
src/trader/modules/tests/: data_feed.rs
src/trader/signals/: blind_scalpping_bird.rs  every_minute_update_stochastic.rs  mod.rs  multiple_stochastic_with_threshold.rs  tsi_stc.rs
src/trader/traits/: exchange.rs  indicator.rs  mod.rs  signal.rs  ws_processer.rs
strategy/: Cargo.toml
strategy/src/: functions.rs  lib.rs
strategy/src/enums/: mod.rs
strategy/src/indicators/: evaluate.rs  mod.rs  stc.rs  stochastic_threshold.rs  tsi.rs  update_as_set.rs
strategy/src/legacy/: structs.rs
strategy/src/legacy/indicators/: base.rs  fast_slow_cloud_rmas.rs  mod.rs  stc.rs  stochastic.rs  update_as_set.rs
strategy/src/legacy/preindicators/: mod.rs
strategy/src/legacy/signals/: cloud_after_benchmark_refactor.rs  custom_open_close.rs  test.rs  youtube_stochastic.rs
strategy/src/params/: mod.rs
strategy/src/preindicators/: ema.rs  mod.rs
strategy/src/schemas/: mod.rs  simple_trend.rs
strategy/src/signals/: cloud_contrarian.rs  cloud_momentum.rs  mod.rs  rma_clouds.rs  simple_follow_trend_signals.rs
strategy/src/static/: mod.rs
strategy/src/strategies/: mod.rs  simple_trend.rs
strategy/src/structs/: mod.rs
trader/: Cargo.toml
trader/src/: main.rs
