[package]
name = "trader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
chrono = "0.4.24"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures-util = "0.3.28"
log = "0.4.17"
polars = { version = "0.29.0", features = [
    "lazy",
    "dtype-datetime",
    "diagonal_concat",
    "dynamic_groupby",
    "temporal",
    "rolling_window",
    "rows",
    "cse",
    "repeat_by",
    "ewma",
    "sign"
] }
polars-lazy = { version = "0.29.0", features = ["rolling_window"] }
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
strum = "0.24.1"
strum_macros = "0.24.3"
tokio = { version = "1.27.0", features = ['full'] }
tokio-tungstenite = { version = "0.18", features = ["native-tls"] }
url = "2.3.1"
