[workspace]
members = ["trader", "backtest", "optimization"]
resolver = "2"

[workspace.package]
name = "glow"
authors = ["Vitor Dhers"]
version = "0.0.2"
edition = "2021"
license = "GPL"

[workspace.dependencies]
async-trait = "0.1.83"
chrono = "0.4.38"
crossterm = "0.28.1"
dotenv = "0.15.0"
enum_dispatch = "0.3.13"
env_logger = "0.11.5"
futures-util = "0.3.31"
log = "0.4.17"
phf = { version = "0.11.2", features = ["macros"] }
polars = { version = "0.46.0", features = [
    "lazy",
    "dtype-datetime",
    "diagonal_concat",
    "temporal",
    "rolling_window",
    "rows",
    "cse",
    "repeat_by",
    "ewma",
    "sign",
    "dynamic_group_by",
    "round_series",
    "abs",
    "cum_agg",
    "is_in",
] }
polars-lazy = { version = "0.46.0", features = ["rolling_window"] }
reqwest = { version = "0.12.8", features = ["json", "gzip"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ['full'] }
tokio-stream = { version = "0.1.16", features = ['sync'] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
tungstenite = { version = "0.24" }
url = "2.3.1"
hmac = "0.12.1"
sha2 = "0.10.7"
serde_urlencoded = "0.7.1"
itertools = "0.13.0"
regex = "1.11.0"
dialoguer = "0.11.0"

[workspace.dependencies.cli]
path = "cli"

[workspace.dependencies.common]
path = "shared/common"

[workspace.dependencies.exchanges]
path = "shared/exchanges"

[workspace.dependencies.glow_error]
path = "shared/error"

[workspace.dependencies.core]
path = "shared/core"

[workspace.dependencies.strategy]
path = "strategy"


[profile.release]
opt-level = 3 # Optimization level 3 (max optimization)
debug = false # Disable debugging information
