[package]
name = "common"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }
glow_error = { workspace = true }
hmac = { workspace = true }
phf = { workspace = true }
polars = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-tungstenite = { workspace = true }
url = { workspace = true }
