[package]
name = "core"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
chrono = { workspace = true }
common = { workspace = true }
exchanges = { workspace = true }
futures-util = { workspace = true }
glow_error = { workspace = true }
polars = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strategy = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-tungstenite = { workspace = true }
url = { workspace = true }
log = { workspace = true }
