[package]
name = "glow_error"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
polars = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
url = { workspace = true }
