[package]
name = "exchanges"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
common = { workspace = true }
dotenv = { workspace = true }
futures-util = { workspace = true }
glow_error = { workspace = true }
polars = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
strategy = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-tungstenite = { workspace = true }
tungstenite = { workspace = true }
url = { workspace = true }
